syntax = "proto3";

package incrementer;

service Incrementer {
    rpc GetNumber(Request) returns (Response) {}
    rpc IncrementNumber(Request) returns (Response) {}
    rpc SetParams(Request) returns (Response) {}
}

message Request {
    int64 maximum_value = 1;
    int64 step_value = 2;
}

message Response {
    int64 num = 1;
}


